// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Slider (snapshot) renders default (no value) 1`] = `
<span
  aria-disabled="false"
  class="relative flex w-full touch-none select-none items-center"
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="relative h-2 w-full grow overflow-hidden rounded-full bg-secondary"
    data-orientation="horizontal"
  >
    <span
      class="absolute h-full bg-primary"
      data-orientation="horizontal"
      style="left: 0%; right: 100%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block size-5 rounded-full border-2 border-primary bg-background ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
</span>
`;

exports[`Slider (snapshot) renders disabled state 1`] = `
<span
  aria-disabled="true"
  class="relative flex w-full touch-none select-none items-center"
  data-disabled=""
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="relative h-2 w-full grow overflow-hidden rounded-full bg-secondary"
    data-disabled=""
    data-orientation="horizontal"
  >
    <span
      class="absolute h-full bg-primary"
      data-disabled=""
      data-orientation="horizontal"
      style="left: 0%; right: 75%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(25% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="block size-5 rounded-full border-2 border-primary bg-background ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
    />
  </span>
</span>
`;

exports[`Slider (snapshot) renders with defaultValue=[50] 1`] = `
<span
  aria-disabled="false"
  class="relative flex w-full touch-none select-none items-center"
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="relative h-2 w-full grow overflow-hidden rounded-full bg-secondary"
    data-orientation="horizontal"
  >
    <span
      class="absolute h-full bg-primary"
      data-orientation="horizontal"
      style="left: 0%; right: 50%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(50% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="block size-5 rounded-full border-2 border-primary bg-background ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
</span>
`;
